--- a/package.json
+++ b/package.json
@@ -1,8 +1,38 @@
 {
+  "name": "jay-prasad-portfolio",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "tailwind": "tailwindcss -i ./input.css -o ./output.css --watch"
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "npx @biomejs/biome format --write ."
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@next/mdx": "^16.0.10",
+    "@once-ui-system/core": "^1.5.6",
+    "classnames": "^2.5.1",
+    "cookie": "^1.0.2",
+    "gray-matter": "^4.0.3",
+    "next": "^16.0.10",
+    "next-mdx-remote": "^5.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "sass": "^1.86.3",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.6"
+    "@biomejs/biome": "^1.9.4",
+    "@types/cookie": "^0.6.0",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.5",
+    "eslint": "^9.25.0",
+    "typescript": "^5.8.3",
+    "tzdata": "^1.0.44"
   }
 }
